--- a/templates/about-base.html
+++ b/templates/about-base.html
@@ -73,80 +73,32 @@
 <div class="copyrights">Collect from <a href="http://www.cssmoban.com/">网页模板</a></div>
 <div class="copyrights">Modified by <a href="http://zmrenwu.com/">追梦人物的博客</a></div>
 
-<div class="content-body">
-    <div class="container">
-        <div class="row">
-            <main class="col-md-8">
-                {% block main %}
-                {% endblock main %}
-            </main>
-            <aside class="col-md-4">
-                {% block toc %}
-                {% endblock toc %}
-                <div class="widget widget-recent-posts">
-                    <h3 class="widget-title">最新文章</h3>
-                    {% get_recent_posts as recent_post_list %}
-                    <ul>
-                        {% for post in recent_post_list %}
-                            <li>
-                                <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-                            </li>
-                        {% empty %}
-                            暂无文章！
-                        {% endfor %}
-                    </ul>
-                </div>
-                <div class="widget widget-archives">
-                    <h3 class="widget-title">归档</h3>
-                    {% archives as date_list %}
-                    <ul>
-                        {% for date in date_list %}
-                            <li>
-                                <a href="{% url 'blog:archives' date.year date.month %}">{{ date.year }}
-                                    年 {{ date.month }} 月</a>
-                            </li>
-                        {% empty %}
-                            暂无归档！
-                        {% endfor %}
-                    </ul>
-                </div>
-
-                <div class="widget widget-category">
-                    <h3 class="widget-title">分类</h3>
-                    {% get_categories as category_list %}
-                    <ul>
-                        {% for category in category_list %}
-                            <li>
-                                <a href="{% url 'blog:category' category.pk %}">{{ category.name }} <span
-                                        class="post-count">({{ category.num_posts }})</span></a>
-                            </li>
-                        {% empty %}
-                            暂无分类！
-                        {% endfor %}
-                    </ul>
-                </div>
-
-                <div class="widget widget-tag-cloud">
-                    <h3 class="widget-title">标签云</h3>
-                    {% get_tags as tag_list %}
-                    <ul>
-                        {% for tag in tag_list %}
-                            <li>
-                                <a href="{% url 'blog:tag' tag.pk %}">{{ tag.name }}</a>
-                            </li>
-                        {% empty %}
-                            暂无标签！
-                        {% endfor %}
-                    </ul>
-                </div>
-
-                <div class="rss">
-                    <a href="{% url 'rss' %}"><span class="ion-social-rss-outline"></span> RSS 订阅</a>
-                </div>
-            </aside>
-        </div>
-    </div>
-</div>
+		<div class="content-body">
+			<div class="container">
+				<div class="row">
+					<main class="col-md-12">
+						<h1 class="page-title">About Me</h1>
+						<article class="post">
+							<div class="entry-content clearfix">
+								<figure class="img-responsive-center">
+									<img class="img-responsive" src="https://i.loli.net/2019/04/29/5cc7094e66644.jpg" alt="This is me">
+								</figure>
+								<p>Responsive web design offers us a way forward, finally allowing us to design for the ebb and flow of things. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don’t look even slightly.</p>
+								<p>Responsive web design offers us a way forward, finally allowing us to design for the ebb and flow of things. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don’t look even slightly.</p>
+								<div class="height-40px"></div>
+								<h2 class="title text-center">Social</h2>
+								<ul class="social">
+									<li class="facebook"><a href="#"><span class="ion-social-facebook"></span></a></li>
+									<li class="twitter"><a href="#"><span class="ion-social-twitter"></span></a></li>
+									<li class="google-plus"><a href="#"><span class="ion-social-googleplus"></span></a></li>
+									<li class="tumblr"><a href="#"><span class="ion-social-tumblr"></span></a></li>
+								</ul>
+							</div>
+						</article>
+					</main>
+				</div>
+			</div>
+		</div>
 <footer id="site-footer">
     <div class="container">
         <div class="row">
